# mytool

./: LICENSE  README.md  dir.h  file.h  file_constant.cpp  file_constant.h  file_io.cc  file_io.h  file_util.cpp  file_util.h  os0file copy.cc
demo-tools/: CMakeLists.txt  file_client.cpp  linux_filesystem.cpp  main.cpp
demo-tools/test/: config.json  script.py
demo-tools/test/data/: sample.cpp
ops-tools/: CMakeLists.txt  file_client.cpp  file_client.h  filesystem_interface.cpp  filesystem_interface.h  main.cpp  spdb_sdk_filesystem.cpp  spdb_sdk_filesystem.h
ops-tools/toolpackage/DEBIAN/: control
ops-tools_copy/: README.md  build.sh  build_deb.txt  dir.h  file_client.cpp  file_client.h  file_io.h  filesystem_interface.cpp  filesystem_interface.h  linux_filesystem.cpp  linux_filesystem.h  main.cpp  quick_test_escape.txt  sdk.h  spdb_sdk_filesystem.cpp  spdb_sdk_filesystem.h
ops-tools_copy/test/: hello.txt
ops-tools_copy/test/documents/: readme.md
opstool/: file_client.cpp  file_client.h  filesystem_interface.cpp  header.h  main.cpp  spdb_sdk_filesystem.cpp  spdb_sdk_filesystem.h
